--- a/src/app/item-page/versions/item-versions.component.html
+++ b/src/app/item-page/versions/item-versions.component.html
@@ -13,7 +13,7 @@
                      [pageInfoState]="versions"
                      [collectionSize]="versions?.totalElements"
                      [retainScrollPosition]="true">
-        <table class="table table-striped table-bordered align-middle my-2">
+        <!-- <table class="table table-striped table-bordered align-middle my-2">
           <thead>
           <tr>
             <th scope="col">{{"item.version.history.table.version" | translate}}</th>
@@ -25,8 +25,8 @@
           <tbody>
           <tr *ngFor="let version of versions?.page" [id]="'version-row-' + version.id">
             <td class="version-row-element-version">
-              <!-- Get the ID of the workspace/workflow item (`undefined` if they don't exist).
-              Conditionals inside *ngVar are needed in order to avoid useless calls. -->
+              Get the ID of the workspace/workflow item (`undefined` if they don't exist).
+              Conditionals inside *ngVar are needed in order to avoid useless calls.
               <ng-container *ngVar="((hasDraftVersion$ | async) ? getWorkspaceId(version?.item) : undefined) as workspaceId$">
                 <ng-container *ngVar=" ((workspaceId$ | async) ? undefined : getWorkflowId(version?.item)) as workflowId$">
 
@@ -54,14 +54,14 @@
                   <div class="right-column">
 
                     <div class="btn-group edit-field space-children-mr" *ngIf="displayActions">
-                      <!--EDIT WORKSPACE ITEM-->
+                      EDIT WORKSPACE ITEM
                       <button class="btn btn-outline-primary btn-sm version-row-element-edit"
                               *ngIf="workspaceId$ | async"
                               (click)="editWorkspaceItem(workspaceId$)"
                               title="{{'item.version.history.table.action.editWorkspaceItem' | translate }}">
                         <i class="fas fa-pencil-alt fa-fw"></i>
                       </button>
-                      <!--CREATE-->
+                      CREATE
                       <ng-container *ngIf="canCreateVersion$ | async">
                         <button class="btn btn-outline-primary btn-sm version-row-element-create"
                                 [disabled]="isAnyBeingEdited() || (hasDraftVersion$ | async)"
@@ -70,7 +70,7 @@
                           <i class="fas fa-code-branch fa-fw"></i>
                         </button>
                       </ng-container>
-                      <!--DELETE-->
+                      DELETE
                       <ng-container *ngIf="canDeleteVersion$(version) | async">
                         <button class="btn btn-sm version-row-element-delete"
                                 [ngClass]="isAnyBeingEdited() ? 'btn-outline-primary' : 'btn-outline-danger'"
@@ -104,7 +104,7 @@
               </div>
 
               <div class="float-right btn-group edit-field space-children-mr" *ngIf="displayActions">
-                <!--DISCARD EDIT -->
+                DISCARD EDIT 
                 <ng-container *ngIf="(canEditVersion$(version) | async) && isThisBeingEdited(version)">
                   <button class="btn btn-sm"
                           [ngClass]="isThisBeingEdited(version) ? 'btn-outline-warning' : 'btn-outline-primary'"
@@ -113,7 +113,7 @@
                     <i class="fas fa-undo-alt fa-fw"></i>
                   </button>
                 </ng-container>
-                <!--EDIT / SAVE-->
+                EDIT / SAVE
                 <ng-container *ngIf="canEditVersion$(version) | async">
                   <button class="btn btn-outline-primary btn-sm version-row-element-edit"
                           *ngIf="!isThisBeingEdited(version)"
@@ -135,7 +135,128 @@
             </td>
           </tr>
           </tbody>
-        </table>
+        </table> -->
+        <div class="table table-striped table-bordered align-middle my-2">
+          <div class="div-table-head">
+            <div class="div-table-tr">
+              <div class="div-table-th div-table-column div-table-version" scope="col">{{"item.version.history.table.version" | translate}}</div>
+              <div class="div-table-th div-table-column div-table-editor" scope="col" *ngIf="(showSubmitter() | async)">{{"item.version.history.table.editor" | translate}}</div>
+              <div class="div-table-th div-table-column div-table-date" scope="col">{{"item.version.history.table.date" | translate}}</div>
+              <div class="div-table-th div-table-column div-table-summery" scope="col">{{"item.version.history.table.summary" | translate}}</div>
+            </div>
+          </div>
+          <div class="div-table-body">
+            <div class="div-table-row" *ngFor="let version of versions?.page" [id]="'version-row-' + version.id">
+              <div class="div-table-column div-table-td version-row-element-version">
+                <!-- Get the ID of the workspace/workflow item (`undefined` if they don't exist).
+                Conditionals inside *ngVar are needed in order to avoid useless calls. -->
+                <ng-container *ngVar="((hasDraftVersion$ | async) ? getWorkspaceId(version?.item) : undefined) as workspaceId$">
+                  <ng-container *ngVar=" ((workspaceId$ | async) ? undefined : getWorkflowId(version?.item)) as workflowId$">
+
+                    <div class="left-column">
+
+                      <span *ngIf="(workspaceId$ | async) || (workflowId$ | async); then versionNumberWithoutLink else versionNumberWithLink"></span>
+                      <ng-template #versionNumberWithLink>
+                        <a [routerLink]="getVersionRoute(version.id)">{{version.version}}</a>
+                      </ng-template>
+                      <ng-template #versionNumberWithoutLink>
+                        {{version.version}}
+                      </ng-template>
+                      <span *ngIf="version?.id === itemVersion?.id">*</span>
+
+                      <span *ngIf="workspaceId$ | async" class="text-light badge badge-primary ml-3">
+                        {{ "item.version.history.table.workspaceItem" | translate }}
+                      </span>
+
+                      <span *ngIf="workflowId$ | async" class="text-light badge badge-info ml-3">
+                        {{ "item.version.history.table.workflowItem" | translate }}
+                      </span>
+
+                    </div>
+
+                    <div class="right-column">
+
+                      <div class="btn-group edit-field space-children-mr" *ngIf="displayActions">
+                        <!--EDIT WORKSPACE ITEM-->
+                        <button class="btn btn-outline-primary btn-sm version-row-element-edit"
+                                *ngIf="workspaceId$ | async"
+                                (click)="editWorkspaceItem(workspaceId$)"
+                                title="{{'item.version.history.table.action.editWorkspaceItem' | translate }}">
+                          <i class="fas fa-pencil-alt fa-fw"></i>
+                        </button>
+                        <!--CREATE-->
+                        <ng-container *ngIf="canCreateVersion$ | async">
+                          <button class="btn btn-outline-primary btn-sm version-row-element-create"
+                                  [disabled]="isAnyBeingEdited() || (hasDraftVersion$ | async)"
+                                  (click)="createNewVersion(version)"
+                                  title="{{createVersionTitle$ | async | translate }}">
+                            <i class="fas fa-code-branch fa-fw"></i>
+                          </button>
+                        </ng-container>
+                        <!--DELETE-->
+                        <ng-container *ngIf="canDeleteVersion$(version) | async">
+                          <button class="btn btn-sm version-row-element-delete"
+                                  [ngClass]="isAnyBeingEdited() ? 'btn-outline-primary' : 'btn-outline-danger'"
+                                  [disabled]="isAnyBeingEdited()"
+                                  (click)="deleteVersion(version, version.id==itemVersion.id)"
+                                  title="{{'item.version.history.table.action.deleteVersion' | translate}}">
+                            <i class="fas fa-trash fa-fw"></i>
+                          </button>
+                        </ng-container>
+                      </div>
+
+                    </div>
+
+                  </ng-container>
+                </ng-container>
+              </div>
+              <div class="div-table-column div-table-td version-row-element-editor" *ngIf="(showSubmitter() | async)">
+                {{version?.submitterName}}
+              </div>
+              <div class="div-table-column div-table-td version-row-element-date">
+                {{version?.created | date : 'yyyy-MM-dd HH:mm:ss'}}
+              </div>
+              <div class="div-table-column div-table-td version-row-element-summary">
+                <div class="float-left">
+                  <ng-container *ngIf="isThisBeingEdited(version); then editSummary else showSummary"></ng-container>
+                  <ng-template #showSummary>{{version?.summary}}</ng-template>
+                  <ng-template #editSummary>
+                    <input class="form-control" type="text" [(ngModel)]="versionBeingEditedSummary"
+                           (keyup.enter)="onSummarySubmit()"/>
+                  </ng-template>
+                </div>
+  
+                <div class="float-right btn-group edit-field space-children-mr" *ngIf="displayActions">
+                  <!--DISCARD EDIT -->
+                  <ng-container *ngIf="(canEditVersion$(version) | async) && isThisBeingEdited(version)">
+                    <button class="btn btn-sm"
+                            [ngClass]="isThisBeingEdited(version) ? 'btn-outline-warning' : 'btn-outline-primary'"
+                            (click)="disableVersionEditing()"
+                            title="{{'item.version.history.table.action.discardSummary' | translate}}">
+                      <i class="fas fa-undo-alt fa-fw"></i>
+                    </button>
+                  </ng-container>
+                  <!--EDIT / SAVE-->
+                  <ng-container *ngIf="canEditVersion$(version) | async">
+                    <button class="btn btn-outline-primary btn-sm version-row-element-edit"
+                            *ngIf="!isThisBeingEdited(version)"
+                            [disabled]="isAnyBeingEdited()"
+                            (click)="enableVersionEditing(version)"
+                            title="{{'item.version.history.table.action.editSummary' | translate}}">
+                      <i class="fas fa-edit fa-fw"></i>
+                    </button>
+                    <button class="btn btn-outline-success btn-sm"
+                            *ngIf="isThisBeingEdited(version)"
+                            (click)="onSummarySubmit()"
+                            title="{{'item.version.history.table.action.saveSummary' | translate}}">
+                      <i class="fas fa-check fa-fw"></i>
+                    </button>
+                  </ng-container>
+                </div>  
+              </div>
+            </div>
+          </div>
+        </div>
         <div>*&nbsp;{{"item.version.history.selected" | translate}}</div>
       </ds-pagination>
       <ds-alert *ngIf="!itemVersion || versions?.page?.length === 0" [content]="'item.version.history.empty'"
